# spectranorm

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/snm/: index.html
api/utils/general/: index.html
api/utils/gsp/: index.html
api/utils/metrics/: index.html
api/utils/nitools/: index.html
api/utils/parallel/: index.html
api/utils/stats/: index.html
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md  index.md
docs/api/: index.md  snm.md
docs/api/utils/: general.md  gsp.md  metrics.md  nitools.md  parallel.md  stats.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/tutorials/: eigenmode_basis.joblib  index.md
docs/tutorials/tmp_directory/spectral_normative_model/: eigenmode_basis.joblib  spectral_model_dict.joblib
license/: index.html
search/: search_index.json
src/spectranorm/: __init__.py  snm.py
src/spectranorm/data/templates/HCP/: S1200.L.midthickness_MSMAll.32k_fs_LR.surf.gii  S1200.R.midthickness_MSMAll.32k_fs_LR.surf.gii
src/spectranorm/utils/: __init__.py  general.py  gsp.py  metrics.py  nitools.py  parallel.py  stats.py
tests/: test_sanity.py
tests/snm/: test_cov.py  test_direct.py
tutorials/: index.html
tutorials/eigenmode_bases/: eigenmode_bases.ipynb  index.html
tutorials/spectral_model/: index.html  spectral_model.ipynb
tutorials/univariate_model/: index.html  univariate_model.ipynb
